--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "socket.io": "^4.8.1",
+    "sqlite3": "^5.1.7",
     "uuid": "^11.1.0"
   }
 }
